# Dexory_Ali_Mohamed_Solutions_T1

./: .gitignore  README.md
docker/: Dockerfile
ros2_ws/filtered_output/: metadata.yaml
ros2_ws/install/lidar_height_filter/share/lidar_height_filter/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/lidar_height_filter/: CMakeLists.txt
ros2_ws/src/lidar_height_filter/install/: local_setup.sh  setup.sh
ros2_ws/src/lidar_height_filter/install/lidar_height_filter/share/lidar_height_filter/: package.dsv  package.ps1  package.sh
ros2_ws/src/lidar_height_filter/src/: height_filter_node.cpp
